# cpp_manual_clangd_example

./: .clangd  CMakeLists.txt  README.md  compile_commands.json  example.txt  run.sh
.cache/clangd/index/: Main.cpp.A7E5D4D12DB59CC0.idx
src/: Main  Main.cpp
